[Filter bar] Proposal for fixing too small scrollable space

--- a/src/plugins/data/public/ui/filter_bar/_global_filter_group.scss
+++ b/src/plugins/data/public/ui/filter_bar/_global_filter_group.scss
@@ -42,6 +42,10 @@
   max-width: calc(100% - #{$euiSizeXS}); // Width minus margin around each flex itm
 }
 
+.globalFilterBar-collapsed {
+  overflow-y: auto;
+}
+
 @include euiBreakpoint('xs', 's') {
   .globalFilterGroup__wrapper-isVisible {
     // EUI Flexbox adds too much margin between responded items, this just moves it up
